--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,5 +1,9 @@
 apply plugin: 'com.android.application'
 
+apply plugin: 'kotlin-android'
+
+apply plugin: 'kotlin-android-extensions'
+
 android {
     compileSdkVersion 28
 
@@ -26,13 +30,23 @@ android {
 }
 
 dependencies {
+
+    def lifecycle_version = "1.0.0-beta01"
+
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':library')
 
-//    implementation 'com.github.WnslgPsl:LifecycleDetect:0.0.1'
+//    implementation ('com.github.WnslgPsl:LifecycleDetect:0.0.2'){
+//        exclude group: "com.android.support"
+//    }
+
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-beta01"
+    implementation "androidx.appcompat:appcompat:$lifecycle_version"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.2"
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.2'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+    androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
 }
