--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -34,11 +34,11 @@ dependencies {
     def lifecycle_version = "1.0.0-beta01"
 
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation project(':library')
+//    implementation project(':library')
 
-//    implementation ('com.github.WnslgPsl:LifecycleDetect:0.0.2'){
-//        exclude group: "com.android.support"
-//    }
+    implementation ('com.github.WnslgPsl:LifecycleDetect:1.0.1'){
+        exclude group: "com.android.support"
+    }
 
     implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-beta01"
     implementation "androidx.appcompat:appcompat:$lifecycle_version"
@@ -48,5 +48,5 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.0-alpha3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0-alpha3'
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
 }
