--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -36,13 +36,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    implementation project(':library')
 
-    implementation ('com.github.WnslgPsl:LifecycleDetect:1.0.1'){
+    implementation ('com.github.WnslgPsl:LifecycleDetect:1.0.0'){
         exclude group: "com.android.support"
     }
 
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-beta01"
+    implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
     implementation "androidx.appcompat:appcompat:$lifecycle_version"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.2"
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.2'
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation 'junit:junit:4.12'
