--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -36,8 +36,8 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
 //    implementation project(':library')
 
-    implementation ('com.github.WnslgPsl:LifecycleDetect:1.0.0'){
-        exclude group: "com.android.support"
+    implementation ('com.github.WnslgPsl:LifecycleDetect:1.0.2'){
+        exclude group: "androidx.appcompat"
     }
 
     implementation 'androidx.lifecycle:lifecycle-extensions:2.0.0-beta01'
